--- a/index.html
+++ b/index.html
@@ -25,15 +25,63 @@
 						</div>
 					</div>
 				</nav>
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  					<ol class="carousel-indicators">
+    				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  				</ol>
+  				<div class="carousel-inner">
+   	 			<div class="carousel-item active">
+			      <img class="d-block w-100" style="max-height: 524px" src="img/mochovillage.jpg" alt="First slide">
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" style="max-height: 524px" src="img/healthierbronx.jpg" alt="Second slide">
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" style="max-height: 524px" src="img/fosteringmentorship.jpg" alt="Third slide">
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>														
+
 			</div>
 		</header>
 		<!-- header -->
 		
 		
 		<div class="container">
-			<section id="mission"> 
+
+			<section id="mission">
+				<div class ="row text-center text-muted">
+					<h1 class="display-1">Our mission is to uplift the underserved</h1>
+				</div>
+				<div class="row">
+				<div class="col-4 font-weight-light">
+				<p>Mocho Village, Inc. is a non-profit organization established in 2014, to provide assistance and resources to underserved communities. We focus on disenfranchised schools and students in New York City and in rural Jamaica. In 2014, we shipped twenty-seven barrels of books to various schools in Jamaica. Many primary and high schools received resources for their schools. The Thompson Town High School, in Mocho, Clarendon, was provided with about ninety-five percent of library resources for their new library, from this shipment. We completed our first summer school, 2014, in Mt. Vernon, St. Thomas. It was a success! Our organization, in collaboration with professionals from Montefiore Medical Center and other health institutions, have successfully conducted two health fairs in Bronx, New York. In February of this year, Mocho Village, hosted there First Annual Health and Wellness Fair in St. Thomas, Jamaica. We will conduct our Third Annual Health and Wellness Street Fair on July 8th, 2017. 
+​				</p>
+				</div>
+				<div class="col-4 font-weight-light">
+				<p>
+				The vision of Mocho Village is to create a world where people have equal opportunities and are able to build sustainable communities. We want to give resources and in some instances show individuals how to use natural resources to improve lives. Most of all, we want to teach people how to appreciate the natural beauty and resources in their environment, obtain the skills necessary to become self-sufficient and build and maintain their communities. 
+				</p>
+			</div>
+				<div class="col-4 font-weight-light">
+				<p>
+					Our major goals are to create a healthier Bronx, improve literacy in rural Jamaica, foster mentorship, showcase individuals and communities, and foster cultural awareness.
+				</p>
+			</div>
+			</div>
 			</section>
 			<section id="get-involved"> 
+
 			</section>
 			<section id="about-us"> 
 			</section>
